--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <div class="header__navigation">
         <ul class="header__nav-list">
           <li class="header__nav-item">
-            <button class="header_link">
+            <button class="header__link">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none"stroke="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.875 18.75C15.2242 18.75 18.75 15.2242 18.75 10.875C18.75 6.52576 15.2242 3 10.875 3C6.52576 3 3 6.52576 3 10.875C3 15.2242 6.52576 18.75 10.875 18.75Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M16.4431 16.4438L20.9994 21.0002" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -329,7 +329,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__container">
-        <div class="footer__item_category footer-category">
+        <div class="footer__item footer__item_category footer-category">
           <h2 class="footer__title footer-category__title">Каталог</h2>
 
           <ul class="footer-category__list">
@@ -375,7 +375,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer__item_social footer-social">
+        <div class="footer__item footer__item_social footer-social">
           <h2 class="footer__title footer-social__title">Связаться с нами</h2>
           <p class="footer-social__subtitle">Контакты и адреса магазинов</p>
           <ul class="footer-social__list">
@@ -395,14 +395,14 @@
             </li>
           </ul>
         </div>
-        <div class="footer__item_contacts footer-contacts">
+        <div class="footer__item footer__item_contacts footer-contacts">
           <a href="mailto:Inspired@gmail.com" class="footer__link">Inspired@gmail.com</a>
           <a href="tel:89304902620" class="footer__link">8 930 490 26 20</a>
         </div>
-        <div class="footer__item_copyright footer-copyright">
+        <div class="footer__item footer__item_copyright footer-copyright">
           <p>© INSPIRED, 2023</p>
         </div>
-        <div class="footer__item_development footer-development">
+        <div class="footer__item footer__item_development footer-development">
           <ul class="footer-development__list">
             <li class="footer-development__item">
               Designer: <a href="https://t.me/Mrshmallowww">Anastasia Ilina</a> 
